--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
 <body>
 	<h2>This is a test of Github Pages.</h2>
+	<h3>Here's how to use it:</h3
+	<ol>
+	  <li>Create a github project (frontend only)</li>
+	  <li>Next, go to that project's settings page.</li>
+	  <li>Click on "Launch automatic page generator"</li>
+	  <li>Follow the directions from <a href="https://pages.github.com/">Github Pages.</a></li>
+	</ol>
 </body>
 </html>
